Refactor RoleDto and ProfileDto